# ComfyUI-4DHumans

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
configs/: model_config.yaml
example_workflows/: 4dhumans_example_workflow.json
humans4d/hmr2/configs/: __init__.py
humans4d/hmr2/models/: __init__.py
nodes/: load_detectron_node.py  load_hmr_node.py  process_humans_node.py  select_human_node.py
utils/: process_humans.py  visualize_humans.py
